to solve tests ......